style.css
:root {
  --primary-background: #fdfdff;
  --secondary-background: #edede9;
  --field: #9ea7a7;
  --button: #6eb0c4;
  --button-notread-hover: #ff3333;
  --font: #100b00;
  --font-winner: #d00000;
  --spacing-xs: 5px;
  --spacing-sm: 10px;
  --spacing-md: 15px;
  --spacing-lg: 20px;
  --spacing-xl: 40px;
}

*,
*::before,
*::after {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

html {
  position: relative;
  min-height: 100%;
  overflow: hidden;
}
body {
  font-size: 18px;
  font-weight: 400;
  font-family: Verdana, Geneva, Tahoma, sans-serif;
  background: var(--primary-background);
  margin-bottom: 10px;
  color: var(--font);
}
/* ======= Utils ======= */

.btn {
  padding: var(--spacing-lg);
  border-radius: 8px;
  border: none;
  font-size: 22px;
  font-weight: bold;
  background: var(--button);
  color: var(--primary-background);
  cursor: pointer;
  transition: all 300ms;
  outline: none;
}
.main-btn .btn {
  padding: 10px 20px;
}
.btn:hover {
  background: var(--primary-background);
  color: var(--button);
}
.modal-input {
  padding: var(--spacing-md);
  font-size: 25px;
  border-radius: 8px;
  outline: none;
  border: 2px solid transparent;
  transition: border 500ms;
}
.modal-input:focus {
  border: 2px solid var(--font-winner);
}
.modal-input:focus + .modal-label {
  top: 0;
  font-size: 18px;
  color: var(--font-winner);
}
.modal-input:not(:focus):not(:placeholder-shown) + .modal-label {
  visibility: hidden;
  /* support for label to not move back to original position */
  top: 0;
  font-size: 18px;
  color: var(--font-winner);
}
.modal-fieldset {
  border: none;
  margin: 0 auto;
  text-align: center;
}
.fieldset-input {
  margin-top: 5px;
  outline: none;
}

/* ======= Header ======= */
.header-container {
  background: var(--primary-background);
  box-shadow: rgba(0, 0, 0, 0.9) 0px 2px 5px;
  width: 100%;
}
.header-heading {
  font-size: 48px;
  letter-spacing: 3px;
  text-align: center;
  padding: var(--spacing-md);
}

/* ======= Main ======= */
.main-container {
  padding: var(--spacing-xl);
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: var(--spacing-md);
}
.main-heading-container {
  display: flex;
  gap: var(--spacing-lg);
}
.main-heading-container,
.info {
  letter-spacing: 1px;
}
.main-btn {
  display: flex;
  gap: 30px;
}
.gameboard {
  display: grid;
  grid-template-columns: repeat(3, 120px);
  grid-template-rows: repeat(3, 120px);
  border: 2px solid;
}
.field {
  border: 1px solid;
  background: var(--field);
  display: flex;
  justify-content: center;
  align-items: center;
  font-size: 90px;
  transition: background-color 300ms;
  cursor: pointer;
  user-select: none;
}
.field:hover {
  background: var(--primary-background);
}
.field:focus {
  background: var(--primary-background);
}
.field.active {
  background: var(--primary-background);
}

/* ======= Footer ======= */
footer {
  text-align: center;
  position: absolute;
  bottom: 0;
  left: 0;
  margin-bottom: 20px;
  width: 100%;
}

/* ======= Alert modal ======= */
.modal-container {
  display: none;
  position: fixed;
  z-index: 1;
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
  overflow: auto;
  background-color: rgb(0, 0, 0);
  background-color: rgba(0, 0, 0, 0.8);
  animation: fade-in 200ms forwards;
}
.modal-container[close] {
  animation: fade-out 500ms forwards;
}
.modal-content {
  position: relative;
  display: flex;
  flex-direction: column;
  justify-content: center;
  gap: var(--spacing-md);
  background: var(--secondary-background);
  margin: 15% auto;
  height: 280px;
  padding: var(--spacing-lg);
  max-width: 300px;
  border-radius: 8px;
  box-shadow: rgba(0, 0, 0, 0.9) 0px 2px 5px;
  animation: grow 0.5s;
}
.modal-label {
  position: absolute;
  top: 43px;
  left: 20px;
  padding: var(--spacing-sm);
  font-size: 24px;
  transition: font-size 500ms, top 500ms;
}
.hidden {
  visibility: hidden;
}

/* ======= Animation ======= */
@keyframes grow {
  0% {
    transform: scale(0);
  }
  100% {
    transform: scale(1);
  }
}
@keyframes fade-in {
  0% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}
@keyframes fade-out {
  0% {
    opacity: 1;
  }
  100% {
    opacity: 0;
  }
}

@media (max-width: 700px) {
  :root {
    --spacing-xl: 20px;
  }
  .main-heading-container {
    font-size: 14px;
  }
  .gameboard {
    grid-template-columns: repeat(3, 110px);
    grid-template-rows: repeat(3, 110px);
  }
  .field {
    font-size: 80px;
  }
  .main-btn .btn {
    font-size: 18px;
  }
  .modal-content {
    margin: 60% auto;
  }
}
@media (max-width: 370px) {
  .header-heading {
    font-size: 30px;
  }
  .main-heading-container {
    font-size: 9px;
  }
  .gameboard {
    grid-template-columns: repeat(3, 85px);
    grid-template-rows: repeat(3, 85px);
  }
  .field {
    font-size: 60px;
  }
  .main-btn .btn {
    font-size: 16px;
    padding: var(--spacing-xs);
  }
}

